# melange

./: .gitignore  Cargo.toml  LICENSE  README.md
melange_macros/: Cargo.toml
melange_macros/src/: closure_definition_syntax.rs  lib.rs  operation_syntax.rs
road_ai_macros/: Cargo.toml
road_ai_macros/src/: lib.rs  operation_syntax.rs  search_replace.rs
src/: lib.rs  prelude.rs  ring.rs
src/backprop/: core_ops.rs  mod.rs  prelude.rs  reduction.rs  ring.rs  variable.rs
src/tensor/: allocation_policy.rs  core_ops.rs  heap_layout.rs  layout.rs  linear_algebra.rs  mod.rs  prelude.rs  reduction.rs  shape.rs  stack_layout.rs  static_heap_layout.rs  tensor.rs  transpose_policy.rs
src/tensor/slice_layout/: mod.rs  strided_chunks.rs
