[package]
name = "melange"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Lucas Bourtoule <lucas@bourtoule.com>"]
edition = "2018"
description = "A simple Deep Learning framework with dynamic computation graphs and tensor shapes checked at compile time."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.1"
cblas = "0.2"
openblas-src = { version = "0.9", default-features = false, features = ["cblas"] }
typenum = "1.12.0"
generic-array = "0.14.4"
melange_macros = { path = "melange_macros", version = "0.1.0" }
