[package]
name = "melange_macros"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Lucas Bourtoule <lucas@bourtoule.com>"]
edition = "2018"
description = "Procedural macros for the melange crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.21"
syn = { version = "1.0.40", features = ["full", "visit-mut"] }
quote = "1.0.7"
